--- a/index.html
+++ b/index.html
@@ -28,22 +28,43 @@
       #sobre-btn:hover {
         background-color: #ffb733;
       }
+
+      html, body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+      }
+
+      #unity-container {
+        width: 100vw !important;
+        height: 100vh !important;
+      }
+
+      #unity-canvas {
+        width: 100vw !important;
+        height: 100vh !important;
+      }
     </style>
   </head>
   <body>
 
     <!-- Botão Sobre -->
-    <a id="sobre-btn" href="https://fox-adventure.vercel.app/" target="_blank">Sobre</a>
+    <a id="sobre-btn" href="https://fox-adventure.vercel.app/">Sobre</a>
 
-    <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
+    <div id="unity-container">
+      <canvas id="unity-canvas" width="1920" height="1080" tabindex="-1"></canvas>
+
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
           <div id="unity-progress-bar-full"></div>
         </div>
       </div>
-      <div id="unity-warning"> </div>
+
+      <div id="unity-warning"></div>
+
       <div id="unity-footer">
         <div id="unity-logo-title-footer"></div>
         <div id="unity-fullscreen-button"></div>
@@ -75,6 +96,7 @@
 
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/JogoWebPC.loader.js";
+
       var config = {
         arguments: [],
         dataUrl: buildUrl + "/JogoWebPC.data",
@@ -87,38 +109,32 @@
         showBanner: unityShowBanner,
       };
 
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        var meta = document.createElement('meta');
-        meta.name = 'viewport';
-        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-        document.getElementsByTagName('head')[0].appendChild(meta);
-        document.querySelector("#unity-container").className = "unity-mobile";
-        canvas.className = "unity-mobile";
-      } else {
-        canvas.style.width = "100vw";
-        canvas.style.height = "100vh";
+      // Ajusta o canvas para tela cheia automaticamente
+      function ajustarTela() {
+        canvas.style.width = window.innerWidth + "px";
+        canvas.style.height = window.innerHeight + "px";
       }
+
+      window.addEventListener("resize", ajustarTela);
+      ajustarTela();
 
       document.querySelector("#unity-loading-bar").style.display = "block";
 
       var script = document.createElement("script");
       script.src = loaderUrl;
+
       script.onload = () => {
         createUnityInstance(canvas, config, (progress) => {
-          document.querySelector("#unity-progress-bar-full").style.width = 100 * progress + "%";
+          document.querySelector("#unity-progress-bar-full").style.width = (100 * progress) + "%";
         }).then((unityInstance) => {
-
           document.querySelector("#unity-loading-bar").style.display = "none";
 
-          // Botão de fullscreen ainda funciona normalmente
+          // força tela cheia automaticamente
+          unityInstance.SetFullscreen(1);
+
           document.querySelector("#unity-fullscreen-button").onclick = () => {
             unityInstance.SetFullscreen(1);
           };
-
-          // ATIVA FULLSCREEN AUTOMÁTICO AO CARREGAR
-          setTimeout(() => {
-            unityInstance.SetFullscreen(1);
-          }, 500);
 
         }).catch((message) => {
           alert(message);
@@ -127,5 +143,6 @@
 
       document.body.appendChild(script);
     </script>
+
   </body>
 </html>
